Add A-Assertions to TaskTracker
Add Java assertions across TaskList, Parser, and Storage components.

Key areas updated:
* TaskList: assert postconditions on task additions and removals.
* Parser: enforce preconditions on internal helper methods.
* Storage: verify valid non-null state during save and load operations.