@@ -26,11 +26,12 @@ public class TaskList {
     }
 
     /**
-     * Initializes a TaskList with pre-loaded tasks (from Storage).
+     * Initializes a TaskList with preloaded tasks (from Storage).
      *
      * @param savedTasks List of tasks loaded from disk.
      */
     public TaskList(List<Task> savedTasks) {
+        assert savedTasks != null : "Initial saved tasklist should not be null.";
         this.taskList = new ArrayList<>(savedTasks);
     }
 
@@ -40,6 +41,7 @@ public class TaskList {
      * @param tasks Initial tasks to populate the list with.
      */
     public TaskList(Task... tasks) {
+        assert tasks != null : "Initial tasks array should not be null.";
         this.taskList = new ArrayList<>(List.of(tasks));
     }
 
@@ -60,11 +62,14 @@ public class TaskList {
      * @throws TaskTrackerException If the task list has reached MAX_TASKS capacity.
      */
     public String add(Task task) throws TaskTrackerException {
+        assert task != null : "Task to add should not be null.";
         if (taskList.size() >= MAX_TASKS) {
             throw new TaskTrackerException(Message.ERR_TASK_LIST_FULL);
         }
 
+        int initialSize = taskList.size();
         taskList.add(task);
+        assert taskList.size() == initialSize + 1 : "Tasklist size should increase by 1 per add.";
         return Message.MSG_TASK_ADDED + " " + task + "\n"
                 + Message.getMsgTaskCount(taskList.size());
     }
@@ -81,7 +86,10 @@ public class TaskList {
             throw new TaskTrackerException(Message.getErrOutOfBounds(taskList.size()));
         }
 
+        int initialSize = taskList.size();
         Task removedTask = taskList.remove(index - 1);
+        assert removedTask != null : "Removed task should not be null.";
+        assert taskList.size() == initialSize - 1 : "Tasklist size should decrease by 1 per delete.";
 
         return Message.MSG_TASK_REMOVED + " " + removedTask + "\n"
                 + Message.getMsgTaskCount(taskList.size());
@@ -94,10 +102,11 @@ public class TaskList {
      * @return Formatted string containing all matching tasks, or a message indicating no matches.
      */
     public String findTasks(String keyword) {
+        assert keyword != null : "Search keyword should not be null.";
         String lowerKeyword = keyword.toLowerCase();
         List<Task> matchingTasks = taskList.stream()
                 .filter(task -> task.getDescription().toLowerCase().contains(lowerKeyword))
-                .collect(Collectors.toList());
+                .toList();
 
         if (matchingTasks.isEmpty()) {
             return Message.ERR_NO_MATCHING_TASKS + keyword + "\n";
@@ -138,6 +147,7 @@ public class TaskList {
         }
 
         Task taskToUpdate = taskList.get(index - 1);
+        assert taskToUpdate != null : "Retrieved task to update should not be null.";
 
         if (isDone) {
             taskToUpdate.markAsDone();
